--- a/app/views/student_quizzes/finished_quiz.html.erb
+++ b/app/views/student_quizzes/finished_quiz.html.erb
@@ -12,7 +12,7 @@
   <b>Question <%= i %>: </b><%= label_tag "#{question.id}", question.txt %> <br>
 
     <%user_answer=Answer.where(response_id: @response.id, question_id:  question.id)%>
-    <%= question.view_completed_question(user_answer).html_safe %><br>
+    <%= question.view_answered_question(user_answer).html_safe %><br>
     <% i += 1 %>
 <%end%>
 <%= link_to "Back", student_quizzes_path(:id => @response_map.reviewer_id) %>
